# libvirt-java

./: .cvsignore  .gitignore  .gitlab-ci.yml  .gitpublish  AUTHORS  CONTRIBUTING.rst  ChangeLog  INSTALL  Jenkinsfile  LICENCE  Makefile.am  Maven.Recipe  NEWS  README  README.in  README.md  aclocal.m4  autobuild.sh  autogen.sh  build.properties  build.xml  config.h.in  configure.in  findbugs.xml  libvirt-java.pc.in  libvirt-java.spec.in  pom.xml  pom.xml.in  test.sh
doc/: Makefile.am
src/: .cvsignore  Makefile.am  test.java
src/jni/: .cvsignore  ConnectAuthCallbackBridge.c  ConnectAuthCallbackBridge.h  ErrorHandler.c  Makefile.am  VirConnectAuthCallbackBridge.c  VirConnectAuthCallbackBridge.h  VirErrorHandler.c  VirErrorHandler.h  generic.h  org_libvirt_Connect.c  org_libvirt_Domain.c  org_libvirt_Network.c  org_libvirt_StoragePool.c  org_libvirt_StorageVol.c  org_libvirt_VirConnect.c  org_libvirt_VirDomain.c  org_libvirt_VirDomain_CreateFlags.h  org_libvirt_VirDomain_MigrateFlags.h  org_libvirt_VirNetwork.c
src/main/java/org/libvirt/: BitFlags.java  CPUCompareResult.java  Connect.java  ConnectAuth.java  ConnectAuthDefault.java  Device.java  Domain.java  DomainBlockInfo.java  DomainBlockJobInfo.java  DomainBlockStats.java  DomainCheckpoint.java  DomainInfo.java  DomainInterface.java  DomainInterfaceStats.java  DomainJobInfo.java  DomainJobStats.java  DomainSnapshot.java  Error.java  ErrorCallback.java  ErrorException.java  ErrorHandler.java  Interface.java  KeycodeSet.java  Library.java  LibvirtException.java  MemoryAddressMode.java  MemoryStatistic.java  Network.java  NetworkFilter.java  NodeInfo.java  SchedBooleanParameter.java  SchedDoubleParameter.java  SchedIntParameter.java  SchedLongParameter.java  SchedParameter.java  SchedUintParameter.java  SchedUlongParameter.java  Secret.java  SecretUsageType.java  SecurityLabel.java  (+17 more)
src/main/java/org/libvirt/event/: AgentLifecycleListener.java  BlockJobListener.java  BlockJobStatus.java  BlockJobType.java  ConnectionCloseListener.java  ConnectionCloseReason.java  CrashedDetail.java  DefinedDetail.java  DetailInfo.java  DomainEvent.java  DomainEventDetail.java  DomainEventType.java  EventListener.java  IOErrorAction.java  IOErrorListener.java  LifecycleListener.java  PMSuspendListener.java  PMSuspendReason.java  PMSuspendedDetail.java  PMWakeupListener.java  PMWakeupReason.java  RebootListener.java  ResumedDetail.java  ShutdownDetail.java  StartedDetail.java  StoppedDetail.java  SuspendedDetail.java  UndefinedDetail.java
src/main/java/org/libvirt/event/enums/: ConnectDomainEventBlockJobStatus.java  DomainEventID.java
src/main/java/org/libvirt/flags/: BitFlagsHelper.java  BlockResizeFlags.java  CreateFlags.java  DomainBlockCopyFlags.java  DomainBlockJobAbortFlags.java  DomainBlockJobInfoFlags.java  DomainBlockResizeFlags.java  DomainCreateFlags.java  DomainDeviceModifyFlags.java  DomainMetadataFlags.java  DomainMigrateFlags.java  DomainModificationImpactFlags.java  DomainSnapshotListFlags.java  DomainSnapshotRevertFlags.java  DomainUndefineFlags.java  DomainXMLFlags.java  MigrateFlags.java  SnapshotListFlags.java  UndefineFlags.java  XMLFlags.java
src/main/java/org/libvirt/jna/: CString.java  CStringByReference.java  ConnectionPointer.java  DevicePointer.java  DomainByReference.java  DomainCheckpointPointer.java  DomainPointer.java  DomainSnapshotPointer.java  Libvirt.java  LibvirtQemu.java  NetworkFilterPointer.java  NetworkPointer.java  SecretPointer.java  SizeT.java  SizeTByReference.java  StoragePoolPointer.java  StorageVolPointer.java  StreamPointer.java  package.html  virConnectAuth.java  virConnectCredential.java  virDomainBlockInfo.java  virDomainBlockJobInfo.java  virDomainBlockStats.java  virDomainInfo.java  virDomainInterface.java  virDomainInterfaceStats.java  virDomainIpAddress.java  virDomainJobInfo.java  virDomainMemoryStats.java  virError.java  virNodeInfo.java  virSchedParameter.java  virSchedParameterValue.java  virStoragePoolInfo.java  virStorageVolInfo.java  virTypedParameter.java  virTypedParameterValue.java  virVcpuInfo.java
src/main/java/org/libvirt/jna/callbacks/: VirConnectAuthCallback.java  VirConnectCloseFunc.java  VirConnectDomainEventBlockJobCallback.java  VirConnectDomainEventCallback.java  VirConnectDomainEventGenericCallback.java  VirConnectDomainEventIOErrorCallback.java  VirConnectDomainEventPMChangeCallback.java  VirDomainEventCallback.java  VirErrorCallback.java  VirEventTimeoutCallback.java  VirFreeCallback.java  VirStreamEventCallback.java  VirStreamSinkFunc.java  VirStreamSourceFunc.java
src/main/java/org/libvirt/jna/pointers/: ConnectionPointer.java  DevicePointer.java  DomainPointer.java  DomainSnapshotPointer.java  InterfacePointer.java  NetworkFilterPointer.java  (+5 more)
src/main/java/org/libvirt/parameters/: DomainBlockCopyParameters.java  Parameters.java  TypedBooleanParameter.java  TypedDoubleParameter.java  TypedIntParameter.java  TypedLongParameter.java  TypedParameter.java  TypedUintParameter.java  TypedUlongParameter.java
src/org/libvirt/: Connect.java  ConnectAuth.java  ConnectAuthDefault.java  Domain.java  DomainBlockStats.java  DomainInfo.java  DomainInterfaceStats.java  Error.java  ErrorException.java  LibvirtException.java  Network.java  NodeInfo.java  SchedBooleanParameter.java  SchedDoubleParameter.java  SchedIntParameter.java  SchedLongParameter.java  SchedParameter.java  SchedUintParameter.java  SchedUlongParameter.java  StoragePool.java  StoragePoolInfo.java  StorageVol.java  StorageVolInfo.java  VcpuInfo.java  VirConnect.java  VirConnectAuth.java  VirConnectAuthDefault.java  VirConnectCredential.java  VirDomain.java  VirDomainBlockStats.java  VirDomainInfo.java  VirDomainInterfaceStats.java  VirError.java  VirErrorException.java  VirNetwork.java  VirNodeInfo.java  VirSchedBooleanParameter.java  VirSchedDoubleParameter.java  VirSchedIntParameter.java  VirSchedLongParameter.java  (+4 more)
src/test/: InterfacePointer.java
src/test/java/: InterfacePointer.java  test.java
src/test/java/org/libvirt/: DummyErrorCallback.java  TestJavaBindings.java  TestLibvirtGlobals.java
(+127 files in other folders)
